--- a/test-output/old/MainSuite/classes.html
+++ b/test-output/old/MainSuite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.jira.TestClasses.TC03_Verify</td>
+<td>com.jira.TestClasses.TC02_VerifyWorkflowDragAndDropFunctionality</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify</td>
+<td>verifyWorkflowDragAndDropFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
